-------------------------------------------------------------------------------
Changes in version 0.93

- Fixed an off-by-one bug in the rate limiting logic (again).

- Fixed an off-by-one bug in the Delivered-To checking code.
-------------------------------------------------------------------------------
Changes in version 0.92

- Fixed the rate limiting logic that would prevent messages from being
  sent out at the appropriate interval.

- Fixed bug in option parsing.
-------------------------------------------------------------------------------
Changes in version 0.91

- Added an option to insert the original subject into the reply.

- Simplified the header scanning logic.
-------------------------------------------------------------------------------